--- a/module4/casestudy_module_4/furama/src/main/resources/static/assets/css/custom.css
+++ b/module4/casestudy_module_4/furama/src/main/resources/static/assets/css/custom.css
@@ -242,7 +242,7 @@ text-align: right;
 
 session .container .card {
     width: 75%;
-    padding: 20px 20px 20px 20px;
+    padding: 20px 20px 40px 20px;
     border: 2px solid #0ea2bd;
     /*box-shadow: 10px 10px 0 #0ea2bd;*/
     border-radius: 50px;
@@ -284,7 +284,8 @@ margin-top: 20px;
 }
 
 .card .row .form-group input,
-.card .row .form-group select {
+.card .row .form-group select ,
+.card .row .form-group textarea {
     /*position: absolute;*/
     width: 150%;
     height: 100%;
@@ -299,10 +300,14 @@ margin-top: 20px;
     margin: 10px;
 }
 
+.card .row .form-group textarea {
+    height: 200%;
+}
 
 .card .row .form-group input:hover,
 .card .row .form-group select:hover,
-.card .row .form-group select option:hover {
+.card .row .form-group select option:hover,
+.card .row .form-group textarea:hover {
     border: 5px solid #e2e3de;
     transition: all 0.5s;
 }
@@ -320,7 +325,8 @@ margin-top: 20px;
 
 
 .card .row .form-group input:focus,
-.card .row .form-group select:focus {
+.card .row .form-group select:focus ,
+.card .row .form-group textarea:focus {
     border: 5px solid #e2e3de;
     transition: all 0.5s;
 }
@@ -365,7 +371,8 @@ margin-top: 20px;
     }
 
     .card .row .col input,
-    .card .row .col select{
+    .card .row .col select,
+    .card .row .col textarea{
         width: 150%;
     }
     .card .row .col label{
@@ -390,7 +397,8 @@ margin-top: 20px;
     }
 
     .card .row .col input,
-    .card .row .col select{
+    .card .row .col select,
+    .card .row .col textarea{
         width: 150%;
     }
     .card .row input[type="submit"] {
