--- a/module5/casestudy_5/templates/head-in-folder.html
+++ b/module5/casestudy_5/templates/head-in-folder.html
@@ -6,8 +6,8 @@
 <meta content="" name="keywords">
 
 <!-- Favicons -->
-<link href="/static/assets/img/flogo.png" rel="icon">
-<link href="/static/assets/img/flogo.png" rel="apple-touch-icon">
+<link href="../../static/assets/img/flogo.png" rel="icon">
+<link href="../../static/assets/img/flogo.png" rel="apple-touch-icon">
 
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,16 +16,16 @@
       rel="stylesheet">
 
 <!-- Vendor CSS Files -->
-<link href="../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="../static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-<link href="../static/assets/vendor/aos/aos.css" rel="stylesheet">
-<link href="../static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-<link href="../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+<link href="../../static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="../../static/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+<link href="../../static/assets/vendor/aos/aos.css" rel="stylesheet">
+<link href="../../static/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+<link href="../../static/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 <!-- Variables CSS Files. Uncomment your preferred color scheme -->
-<link href="../static/assets/css/variables.css" rel="stylesheet">
+<link href="../../static/assets/css/variables.css" rel="stylesheet">
 
 <!-- Template Main CSS File -->
 <!--    <link rel="stylesheet" href="/static/bootstrap-5.2.0-beta1-dist/css/bootstrap.css">-->
-<link rel="stylesheet" href="../static/assets/css/main.css">
-<link rel="stylesheet" href="../static/assets/css/custom.css">
+<link rel="stylesheet" href="../../static/assets/css/main.css">
+<link rel="stylesheet" href="../../static/assets/css/custom.css">
