--- a/module5/casestudy_5/static/assets/css/custom.css
+++ b/module5/casestudy_5/static/assets/css/custom.css
@@ -240,7 +240,7 @@ text-align: right;
 
 /*---------Form create & edit---------*/
 
-session .container .card {
+section .container .card {
     width: 75%;
     padding: 20px 20px 40px 20px;
     border: 2px solid #0ea2bd;
@@ -433,4 +433,21 @@ table tr .text-left{
 }
 table tr .text-right{
     text-align: right;
+}
+
+/*--------Card Facility--------*/
+.card-title-facility{
+    position: relative;
+    top: 0;
+}
+.card-img-overlay h1 {
+    font-size: 60px;
+    font-weight: bold;
+    padding-top: 100px;
+}
+.facilities{
+    padding: 70px 70px;
+}
+.card{
+    margin-top: 30px;
 }
