--- a/module5/casestudy_5/templates/facility/facility-list.html
+++ b/module5/casestudy_5/templates/facility/facility-list.html
@@ -1,126 +1,215 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:insert="~{index::head}">
-    <meta charset="UTF-8">
-    <title>Facility</title>
-    <link rel="stylesheet" href="/static/assets/css/custom.css">
+<html lang="en">
+<head>
+
 </head>
 <body>
-<header th:replace="~{index::header}"></header>
-<session class="hero-animated d-flex align-items-center">
-    <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">
-        <h3>Facility List</h3>
-        <div class="d-inline-flex">
-            <a th:href="@{/facility/create}">
-                <button class="btn-create">New Facility</button>
-            </a>
-            <form th:action="@{/facility}">
-                <input class="input-search" type="text" placeholder="Search" name="search" th:value="${keyword}">
-                <button class="btn-create scrollto">Search</button>
-            </form>
+<header id="header" class="header fixed-top" data-scrollto-offset="0"></header>
+<section class="facility-container">
+    <div class="card-title-facility card bg-dark text-white border-0">
+        <img src="../../static/assets/img/fFacility-bg.jpg" class="card-img" alt="...">
+        <div class="card-img-overlay text-center">
+            <h1 class="card-title ">ROOM & SUITES</h1>
         </div>
-        <div style="margin-top: 20px" th:if="${msg}">
-            <small th:utext="${msg}" style="color: green;"></small>
-        </div>
-        <div style="margin-top: 20px" th:if="${msgDelete}">
-            <small th:utext="${msgDelete}" style="color: red;"></small>
-        </div>
-        <div style="margin-top: 40px">
-            <p style="font-style: italic" th:if="${msgNotFound}" th:utext="${msgNotFound}"></p>
-        </div>
-        <table style="width: 100%" th:if="${facilityList}">
-            <thead>
-            <tr>
-                <th>No.</th>
-                <th>Facility Name</th>
-                <th>Area</th>
-                <th>Cost</th>
-                <th>Max People</th>
-                <th>Rent Type</th>
-                <th>Facility Type</th>
-                <th>Standard Room</th>
-                <th>Other Convenience</th>
-                <th>Pool Area</th>
-                <th>No. Of Floors</th>
-                <th>Free Facility</th>
-                <th colspan="2">Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="facility,loop:${facilityList}">
-                <td th:text="${loop.count}"></td>
-                <td th:text="${facility.facilityName}"></td>
-                <td th:text="${facility.area}"></td>
-                <td th:text="${facility.cost}"></td>
-                <td th:text="${facility.maxPeople}"></td>
-                <td th:text="${facility.rentType.rentTypeName}"></td>
-                <td th:text="${facility.facilityType.facilityTypeName}"></td>
-                <td th:text="${facility.standardRoom}"></td>
-                <td th:text="${facility.otherConvenience}"></td>
-                <td th:text="${facility.poolArea}"></td>
-                <td th:text="${facility.numberOfFloors}"></td>
-                <td th:text="${facility.freeFacility}"></td>
-                <td>
-                    <a th:href="@{/facility/edit/{id}(id=${facility.facilityId})}">
-                        <button class="btn-edit">edit</button>
-                    </a>
-                </td>
-                <td>
-                    <button class="btn-delete" data-bs-toggle="modal"
-                            th:data-bs-target="'#exampleModal'+${facility.facilityId}">delete
-                    </button>
-                </td>
+    </div>
 
-
-                <!-- Modal Delete -->
-                <div class="modal fade" th:id="'exampleModal'+${facility.facilityId}" tabindex="-1"
-                     aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure to delete the facility
-                                <strong style="color: #bb2d3b" th:text="${facility.facilityName}">"</strong>
-                                ?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <a th:href="@{/facility/delete/{id}(id=${facility.facilityId})}">
-                                    <button type="button" class="btn-modal-delete">Delete</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </tr>
-            </tbody>
-        </table>
-
-        <!-- Page -->
-        <div class="row align-self-xl-end small" th:if="${facilityList}">
-            <div class="col-12">
-                <a th:if="${facilityList.hasPrevious()}"
-                   th:href="@{facility(page=${facilityList.number - 1}, search=${keyword})}">
-                    <i class="bi bi-caret-left-fill"></i>
-                </a>
-                <span th:text="${facilityList.number + 1}"></span>
-                /
-                <span th:text="${facilityList.totalPages}"></span>
-                <a th:if="${facilityList.hasNext()}"
-                   th:href="@{facility(page=${facilityList.number + 1}, search=${keyword})}">
-                    <i class="bi bi-caret-right-fill"></i>
-                </a>
+    <div class="facilities  align-items-center" style="display: flex;flex-wrap: wrap;justify-content: space-between">
+        <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""><p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
             </div>
         </div>
+        <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""> <p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
 
+            </div>
+        </div>
+        <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""><p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
+
+            </div>
+        </div>
+        <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""> <p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
+
+            </div>
+        </div> <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""><p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
+
+            </div>
+        </div>
+        <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""> <p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
+
+            </div>
+        </div>
+        <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""><p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
+
+            </div>
+        </div>
+        <div class="card" style="width: 23%;">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""> <p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p><a href=""><i class="bi bi-pencil"></i></a>  <a href=""><i class="bi bi-trash"></i></a></p>
+
+            </div>
+        </div>
     </div>
-</session>
-<footer th:replace="~{index::footer}"></footer>
-<th:block th:replace="~{index::script}"></th:block>
+
+</section>
+
+
+<!--<section class="hero-animated d-flex align-items-center">-->
+<!--    <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative">-->
+<!--        <h3>Customer List</h3>-->
+<!--        <div class="d-inline-flex">-->
+<!--            <a href="">-->
+<!--                <button class="btn-create">New Customer</button>-->
+<!--            </a>-->
+<!--            <form action="">-->
+<!--                <input class="input-search" type="text" placeholder="Search" name="search" value="">-->
+<!--                <button class="btn-create scroll to">Search</button>-->
+<!--            </form>-->
+<!--        </div>-->
+<!--        &lt;!&ndash;        <div style="margin-top: 20px" >&ndash;&gt;-->
+<!--        &lt;!&ndash;            <small  style="color: green;"></small>&ndash;&gt;-->
+<!--        &lt;!&ndash;        </div>&ndash;&gt;-->
+
+<!--        <table style="width: 100%">-->
+<!--            <thead>-->
+<!--            <tr>-->
+<!--                <th>No.</th>-->
+<!--                <th>Name</th>-->
+<!--                <th>Customer Type</th>-->
+<!--                <th>Date Of Birth</th>-->
+<!--                <th>Gender</th>-->
+<!--                <th>ID Card</th>-->
+<!--                <th>Phone</th>-->
+<!--                <th>Email</th>-->
+<!--                <th>Address</th>-->
+<!--                <th colspan="2">Action</th>-->
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody>-->
+<!--            <tr>-->
+<!--                <td>1</td>-->
+<!--                <td class="text-left">ABC</td>-->
+<!--                <td>q</td>-->
+<!--                <td>ư</td>-->
+<!--                <td>ư</td>-->
+<!--                <td>q</td>-->
+<!--                <td>q</td>-->
+<!--                <td>q</td>-->
+<!--                <td>q</td>-->
+<!--                <td>-->
+<!--                    <a href="">-->
+<!--                        <button class="btn-edit">edit</button>-->
+<!--                    </a>-->
+<!--                </td>-->
+<!--                <td>-->
+<!--                    <button class="btn-delete" data-bs-toggle="modal"-->
+<!--                            data-bs-target="#exampleModal">delete-->
+<!--                    </button>-->
+<!--                </td>-->
+
+<!--                &lt;!&ndash; Modal &ndash;&gt;-->
+<!--                <div class="modal fade" id="exampleModal" tabindex="-1"-->
+<!--                     aria-labelledby="exampleModalLabel" aria-hidden="true">-->
+<!--                    <div class="modal-dialog">-->
+<!--                        <div class="modal-content">-->
+<!--                            <div class="modal-header">-->
+<!--                                <h5 class="modal-title" id="exampleModalLabel">Delete </h5>-->
+<!--                                <button type="button" class="btn-close" data-bs-dismiss="modal"-->
+<!--                                        aria-label="Close"></button>-->
+<!--                            </div>-->
+<!--                            <div class="modal-body">-->
+<!--                                Are you sure to delete <strong style="color: #bb2d3b"> ABC</strong>?-->
+<!--                            </div>-->
+<!--                            <div class="modal-footer">-->
+<!--                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
+<!--                                <a href="">-->
+<!--                                    <button type="button" class="btn-modal-delete">Delete</button>-->
+<!--                                </a>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--        </table>-->
+<!--        <div class="row align-self-xl-end small">-->
+<!--            <div class="col-12">-->
+<!--                <a href="">-->
+<!--                    <i class="bi bi-caret-left-fill"></i>-->
+<!--                </a>-->
+<!--                <span></span>-->
+<!--                /-->
+<!--                <span></span>-->
+<!--                <a href="">-->
+<!--                    <i class="bi bi-caret-right-fill"></i>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+<footer id="footer" class="footer"></footer>
+<script id="script"></script>
+<script src="/static/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("head").load("/templates/head-in-folder.html");
+        $("#header").load("/templates/header.html");
+        $("#footer").load("/templates/footer.html");
+        $("#script").load("/templates/script.html");
+    });
+</script>
+
+
 </body>
 </html>
