--- a/module5/casestudy_5/templates/header.html
+++ b/module5/casestudy_5/templates/header.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="container-fluid d-flex align-items-center justify-content-between">
+    <a href="" class="logo d-flex align-items-center scrollto me-auto me-lg-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="/static/assets/img/flogo.png" alt="furama-logo">
+        <h1>Furama</h1>
+    </a>
+    <nav id="navbar" class="navbar">
+        <ul>
+            <li class="dropdown"><a href=""><span>Home</span></a></li>
+            <li><a class="nav-link scrollto" href="">Employee</a></li>
+            <li><a class="nav-link scrollto" href="">Customer</a></li>
+            <li><a class="nav-link scrollto" href="">Facility</a></li>
+            <li><a class="nav-link scrollto" href="">Contract</a></li>
+            <li><a class="btn-login" href="">Login</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle d-none"></i>
+    </nav><!-- .navbar -->
+</div>
