--- a/module5/casestudy_module_5/templates/facility/facility-list.html
+++ b/module5/casestudy_module_5/templates/facility/facility-list.html
@@ -121,6 +121,36 @@
             </div>
         </div>
         <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""><p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p>
+                    <a href=""><i class="bi bi-pencil"></i></a>
+                    <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <i class="bi bi-trash"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
+            <img src="../../static/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
+                 alt="Garden-Deluxe-twin-bed">
+            <div class="card-body">
+                <a href=""><p class="card-text">Garden Deluxe</p></a>
+                <small>Room size: 43.7 m2</small><br>
+                <small>Price: 1.000.000 VND</small>
+                <p>
+                    <a href=""><i class="bi bi-pencil"></i></a>
+                    <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        <i class="bi bi-trash"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
             <a href="" style="width: 40%; margin: 30% ">
                 <img src="../../static/assets/img/fplus.png" class="card-img-top"
                  alt="Add new facility">
