--- a/module5/casestudy_module_5/static/assets/css/custom.css
+++ b/module5/casestudy_module_5/static/assets/css/custom.css
@@ -12,7 +12,7 @@ table {
     0px 10px 20px rgba(0, 0, 0, 0.05),
     0px 20px 20px rgba(0, 0, 0, 0.05),
     0px 30px 20px rgba(0, 0, 0, 0.05);
-   background: #fff;
+    background: #fff;
 }
 
 tr:hover {
@@ -182,7 +182,7 @@ th last {
 .modal-create .modal-dialog .modal-content .modal-header h5 {
     font-family: 'Poppins', sans-serif;
     font-weight: normal;
-    font-style: italic;
+    /*font-style: italic;*/
     text-transform: uppercase;
 }
 
