--- a/module5/casestudy5-angular/src/app/facility/facility-list/facility-list.component.html
+++ b/module5/casestudy5-angular/src/app/facility/facility-list/facility-list.component.html
@@ -1,8 +1,8 @@
 <section class="facility-container">
-  <div class="card-title-facility  bg-dark text-white border-0">
+  <div class="card-title-facility  bg-dark text-white border-0 ">
     <img src="/assets/img/fFacility-bg.jpg" class="card-img" alt="...">
-    <div class="card-img-overlay text-center">
-      <h1 class="card-title ">ROOM & SUITES</h1>
+    <div class="card-img-overlay text-center ">
+      <h1 class="card-title">ROOM & SUITES</h1>
     </div>
   </div>
 
@@ -181,19 +181,26 @@
   </div>
 </div>
 
-<!--        <div class="row align-self-xl-end small">-->
-<!--            <div class="col-12">-->
-<!--                <a href="">-->
-<!--                    <i class="bi bi-caret-left-fill"></i>-->
-<!--                </a>-->
-<!--                <span></span>-->
-<!--                /-->
-<!--                <span></span>-->
-<!--                <a href="">-->
-<!--                    <i class="bi bi-caret-right-fill"></i>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
+<!--Pagination-->
+<div class="d-flex justify-content-end">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
+
 
