--- a/module5/casestudy5-angular/src/app/app.component.html
+++ b/module5/casestudy5-angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <!--<app-facility-list></app-facility-list>-->
-<!--<app-facility-create></app-facility-create>-->
+<app-facility-create></app-facility-create>
 <!--<app-facility-edit></app-facility-edit>-->
 
 <!--<app-customer-list></app-customer-list>-->
@@ -9,7 +9,7 @@
 <!--<app-customer-edit></app-customer-edit>-->
 
 <!--<app-contract-list></app-contract-list>-->
-<app-contract-create></app-contract-create>
+<!--<app-contract-create></app-contract-create>-->
 
 
 <app-footer></app-footer>
