M5 SS5 Component Interaction

--- a/module5/ss5-component-interaction/src/app/app.component.html
+++ b/module5/ss5-component-interaction/src/app/app.component.html
@@ -1,11 +1,21 @@
 <!--thuc hanh namecard-->
-<app-thuc-hanh-namecard
-  cardName="Professional Dev"
-  email="prodev@gmail.com"
-  phone="0123456789">
 
-</app-thuc-hanh-namecard>
+<!--<app-thuc-hanh-namecard-->
+<!--  cardName="Professional Dev"-->
+<!--  email="prodev@gmail.com"-->
+<!--  phone="0123456789">-->
+<!--</app-thuc-hanh-namecard>-->
 
-<hr>
+<!--<hr>-->
+
 <!--thuc hanh progress-bar-->
-<app-thuc-hanh-progress-bar progress="0"></app-thuc-hanh-progress-bar>
+
+<!--<app-thuc-hanh-progress-bar progress="0"></app-thuc-hanh-progress-bar>-->
+
+<!--bai tap rating-->
+
+<!--<app-bai-tap-rating-bar></app-bai-tap-rating-bar>-->
+
+
+<!--bai tap countdown-->
+<app-bai-tap-countdown-timer></app-bai-tap-countdown-timer>
