M5 SS6 Angular Form

--- a/module5/ss5-component-interaction/src/app/app.component.html
+++ b/module5/ss5-component-interaction/src/app/app.component.html
@@ -14,8 +14,8 @@
 
 <!--bai tap rating-->
 
-<!--<app-bai-tap-rating-bar></app-bai-tap-rating-bar>-->
+<app-bai-tap-rating-bar></app-bai-tap-rating-bar>
 
 
 <!--bai tap countdown-->
-<app-bai-tap-countdown-timer></app-bai-tap-countdown-timer>
+<!--<app-bai-tap-countdown-timer></app-bai-tap-countdown-timer>-->
