--- a/module5/casestudy5-angular/src/app/customer/customer-list/customer-list.component.html
+++ b/module5/casestudy5-angular/src/app/customer/customer-list/customer-list.component.html
@@ -108,7 +108,7 @@
         <td class="text-left">a</td>
         <td class="text-left">a</td>
         <td class="text-left">a</td>
-        <td class="text-left">aaaaaaaaaaaa </td>
+        <td class="text-left">aaaaaaaaaaaa</td>
         <td>
           <a href="">
             <button class="btn-edit">edit</button>
@@ -144,26 +144,30 @@
       </tbody>
     </table>
 
-    <!--        Paging-->
-    <!--        <div class="row align-self-xl-end small" th:if="${customerList}">-->
-    <!--            <div class="col-12">-->
-    <!--                <a th:if="${customerList.hasPrevious()}"-->
-    <!--                   th:href="@{customer(page=${customerList.number - 1}, search=${keyword})}">-->
-    <!--                    <i class="bi bi-caret-left-fill"></i>-->
-    <!--                </a>-->
-    <!--                <span th:text="${customerList.number + 1}"></span>-->
-    <!--                /-->
-    <!--                <span th:text="${customerList.totalPages}"></span>-->
-    <!--                <a th:if="${customerList.hasNext()}"-->
-    <!--                   th:href="@{customer(page=${customerList.number + 1}, search=${keyword})}">-->
-    <!--                    <i class="bi bi-caret-right-fill"></i>-->
-    <!--                </a>-->
-    <!--            </div>-->
-    <!--        </div>-->
+
+    <!--Pagination-->
+    <div class="d-flex justify-content-end">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item ">
+            <a class="page-link bg-warning" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item ">
+            <a class="page-link bg-warning" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
   </div>
 </section>
-
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1"
      aria-labelledby="exampleModalLabel" aria-hidden="true">
