M5 SS6 Angular Form

--- a/module5/ss6-form/src/app/app.component.html
+++ b/module5/ss6-form/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!--<app-thuc-hanh-todo></app-thuc-hanh-todo>-->
 
-<app-bai-tap-form-dang-ky></app-bai-tap-form-dang-ky>
+<!--<app-bai-tap-form-dang-ky></app-bai-tap-form-dang-ky>-->
+
+<app-bai-tap-form-dang-nhap></app-bai-tap-form-dang-nhap>
