--- a/module5/casestudy5-angular/src/app/contract/contract-list/contract-list.component.html
+++ b/module5/casestudy5-angular/src/app/contract/contract-list/contract-list.component.html
@@ -84,7 +84,7 @@
                   <td><label>Attach Facility</label></td>
                   <td>
                     <select>
-                      <option value="">--Select Attach Facility--</option>
+                      <option value="" hidden selected>--Select Attach Facility--</option>
                       <option>Karaoke</option>
                       <option>Massage</option>
                       <option>Food</option>
@@ -97,15 +97,12 @@
                   <td><label>Quantity</label></td>
                   <td><input type="number"></td>
                 </tr>
-                <tr>
-                  <td colspan="2">
-                    <a class="btn btn-secondary" data-bs-dismiss="modal"
-                       style="margin-right: 200px">Close</a>
-                    <button type="submit" class="btn-modal-delete">Add</button>
-                  </td>
-                </tr>
               </table>
             </form>
+          </div>
+          <div class="modal-footer">
+            <a class="btn btn-secondary" data-bs-dismiss="modal">Close</a>
+            <button type="submit" class=" btn btn-modal-delete">Add</button>
           </div>
         </div>
       </div>
