--- a/module5/casestudy5-angular/src/app/customer/customer-list/customer-list.component.html
+++ b/module5/casestudy5-angular/src/app/customer/customer-list/customer-list.component.html
@@ -185,7 +185,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         <a href="">
-          <button type="button" class="btn-modal-delete">Delete</button>
+          <button type="button" class="btn btn-create">Delete</button>
         </a>
       </div>
     </div>
