--- a/module5/casestudy5-angular/src/app/app.component.html
+++ b/module5/casestudy5-angular/src/app/app.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 
-<!--<app-facility-list></app-facility-list>-->
+<app-facility-list></app-facility-list>
 <!--<app-facility-create></app-facility-create>-->
 <!--<app-facility-edit></app-facility-edit>-->
 
-<app-customer-list></app-customer-list>
+<!--<app-customer-list></app-customer-list>-->
 <!--<app-customer-create></app-customer-create>-->
 <!--<app-customer-edit></app-customer-edit>-->
 
