--- a/module5/casestudy5-angular/src/app/facility/facility-list/facility-list.component.html
+++ b/module5/casestudy5-angular/src/app/facility/facility-list/facility-list.component.html
@@ -8,13 +8,13 @@
 
 
   <div class="row gy-5 facilities">
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
+    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50" *ngFor="let facility of facilities">
       <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
            alt="Garden-Deluxe-twin-bed">
       <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
+        <a href=""><p class="card-text">{{facility.name}}</p></a>
+        <small>Room size: {{facility.area}} m2</small><br>
+        <small>Price: {{facility.cost}} VND</small>
         <p>
           <a href=""><i class="bi bi-pencil"></i></a>
           <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -23,126 +23,22 @@
         </p>
       </div>
     </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
-    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
-      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"
-           alt="Garden-Deluxe-twin-bed">
-      <div class="card-body">
-        <a href=""><p class="card-text">Garden Deluxe</p></a>
-        <small>Room size: 43.7 m2</small><br>
-        <small>Price: 1.000.000 VND</small>
-        <p>
-          <a href=""><i class="bi bi-pencil"></i></a>
-          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <i class="bi bi-trash"></i>
-          </a>
-        </p>
-      </div>
-    </div>
+<!--    <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">-->
+<!--      <img src="/assets/img/fGarden-Deluxe-twin-bed.jpg" class="card-img-top"-->
+<!--           alt="Garden-Deluxe-twin-bed">-->
+<!--      <div class="card-body">-->
+<!--        <a href=""><p class="card-text">Garden Deluxe</p></a>-->
+<!--        <small>Room size: 43.7 m2</small><br>-->
+<!--        <small>Price: 1.000.000 VND</small>-->
+<!--        <p>-->
+<!--          <a href=""><i class="bi bi-pencil"></i></a>-->
+<!--          <a href="" data-bs-toggle="modal" data-bs-target="#exampleModal">-->
+<!--            <i class="bi bi-trash"></i>-->
+<!--          </a>-->
+<!--        </p>-->
+<!--      </div>-->
+<!--    </div>-->
+
     <div class="card col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="50">
       <a href="" style="width: 40%; margin: 30% ">
         <img src="/assets/img/fplus.png" class="card-img-top"
